@@ -1,6 +1,7 @@
-#Wed Aug 24 18:27:30 CEST 2011
+#Sat Nov 19 09:18:33 PST 2011
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
+encoding/<project>=UTF-8
